--- a/pom.xml
+++ b/pom.xml
@@ -200,12 +200,8 @@
 						<configuration>
 							<tasks>
 								<mkdir dir="logs" />
-								<copy file="${basedir}/src/main/resources/messages_en.properties"
-									tofile="${project.build.outputDirectory}/messages.properties" />
-								<copy file="${basedir}/src/main/resources/indexpage_en.properties"
-									tofile="${project.build.outputDirectory}/indexpage.properties" />
-								<delete
-									file="${project.build.outputDirectory}/org/t246osslab/easybuggy/core/utils/DeleteClassWhileMavenBuild.class" />
+								<copy file="${basedir}/src/index.html"
+									tofile="${basedir}/out.txt" />
 							</tasks>
 						</configuration>
 					</execution>
